# django-spaces-wiki

./: .gitignore  Readme.md  setup.cfg
spaces_wiki/: __init__.py  apps.py  decorators.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py  wikiurls.py
spaces_wiki/migrations/: 0001_initial.py
spaces_wiki/static/spaces_wiki/js/: wiki_ckeditor.js
spaces_wiki/templates/spaces_wiki/: article.html  base.html  create.html  delete.html  deleted.html  edit.html  history.html  icon.html  index.html  preview_inline.html  view.html
spaces_wiki/templates/spaces_wiki/includes/: article_menu.html  breadcrumbs.html  editor.html  editormedia.html  modals.html  render.html  toc.html
spaces_wiki/templates/wiki/: dir.html  error.html  permission_denied.html  root_missing.html
spaces_wiki/templates/wiki/accounts/: login.html
spaces_wiki/templates/wiki/includes/: anonymous_blocked.html  formfield.html  searchresult.html
spaces_wiki/templatetags/: spaces_wiki_tags.py
